Fixed the autotools configuration to now produce a *.so

--- a/configure.ac
+++ b/configure.ac
@@ -1,4 +1,7 @@
-AC_INIT([aparapi], [1.0.0], [jeffrey.freeman@syncleus.com])
+AC_INIT([libaparapi], [1.0.0], [jeffrey.freeman@syncleus.com])
+AC_ENABLE_SHARED(yes)
+AC_ENABLE_STATIC(no)
+LT_INIT
 AM_INIT_AUTOMAKE([subdir-objects])
 AC_PROG_CXX
 AC_CONFIG_FILES([Makefile])
