Removed some unused project files. Updated the project for the new package names.

--- a/configure.ac
+++ b/configure.ac
@@ -5,5 +5,5 @@ LT_INIT
 AM_INIT_AUTOMAKE([subdir-objects])
 AC_PROG_CXX
 AC_CONFIG_FILES([Makefile])
-AC_CONFIG_COMMANDS([mkdir include], [cd java && mvn clean package], [javah -jni -classpath ./java/target/classes -d include -force com.amd.aparapi.internal.jni.ConfigJNI com.amd.aparapi.internal.jni.KernelArgJNI com.amd.aparapi.internal.jni.KernelRunnerJNI com.amd.aparapi.internal.jni.OpenCLJNI com.amd.aparapi.internal.jni.RangeJNI com.amd.aparapi.Kernel com.amd.aparapi.Range com.amd.aparapi.Config com.amd.aparapi.device.Device com.amd.aparapi.device.OpenCLDevice com.amd.aparapi.internal.kernel.KernelRunner com.amd.aparapi.internal.opencl.OpenCLArgDescriptor com.amd.aparapi.internal.opencl.OpenCLMem])
+AC_CONFIG_COMMANDS([mkdir include], [cd java && mvn clean package], [javah -jni -classpath ./java/target/classes -d include -force com.syncleus.aparapi.internal.jni.ConfigJNI com.syncleus.aparapi.internal.jni.KernelArgJNI com.syncleus.aparapi.internal.jni.KernelRunnerJNI com.syncleus.aparapi.internal.jni.OpenCLJNI com.syncleus.aparapi.internal.jni.RangeJNI com.syncleus.aparapi.Kernel com.syncleus.aparapi.Range com.syncleus.aparapi.Config com.syncleus.aparapi.device.Device com.syncleus.aparapi.device.OpenCLDevice com.syncleus.aparapi.internal.kernel.KernelRunner com.syncleus.aparapi.internal.opencl.OpenCLArgDescriptor com.syncleus.aparapi.internal.opencl.OpenCLMem])
 AC_OUTPUT
