Fixed a bug where the LD flags werent being set.

--- a/configure.ac
+++ b/configure.ac
@@ -2,20 +2,20 @@ AC_INIT([libaparapi], [1.2.1], [syncleus@syncleus.com])
 AC_ENABLE_SHARED(yes)
 AC_ENABLE_STATIC(no)
 LT_INIT
-AM_INIT_AUTOMAKE([foreign subdir-objects])
+AM_INIT_AUTOMAKE([subdir-objects])
 AC_PROG_CXX
 AC_CONFIG_FILES([Makefile])
-AC_OUTPUT
 AC_CANONICAL_HOST
 case $host_os in
   darwin* )
-        LDFLAGS="-framework OpenCL -version-info 3:1:2"
+        AC_LDFLAGS="-framework OpenCL -version-info 3:1:2"
         ;;
   mingw*)
-        LDFLAGS="-no-undefined -lOpenCL -version-info 3:1:2"
+        AC_LDFLAGS="-no-undefined -lOpenCL -version-info 3:1:2"
         ;;
   *)
-        LDFLAGS="-lOpenCL -version-info 3:1:2"
+        AC_LDFLAGS="-lOpenCL -version-info 3:1:2"
         ;;
 esac
-AC_SUBST([LDFLAGS])
+AC_SUBST(AC_LDFLAGS)
+AC_OUTPUT
